plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.0'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'pro.vaidas'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.33'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.0.6'
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-client', version: '4.0.2'

    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'

    implementation 'org.mapstruct:mapstruct:1.5.5.Final'

    implementation 'org.springframework.kafka:spring-kafka'
    implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.4.0'
    implementation group: 'org.apache.zookeeper', name: 'zookeeper', version: '3.8.1'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.1'

    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'



}

tasks.named('test') {
    useJUnitPlatform()
}
